tests/ui/span/issue-81800.stderr
error: unknown start of token: \u{2c2}
  --> $DIR/issue-81800.rs:1:5
   |
LL | fn x˂-
   |     ^
   |
help: Unicode character '˂' (Modifier Letter Left Arrowhead) looks like '<' (Less-Than Sign), but it is not
   |
LL - fn x˂-
LL + fn x<-
   |

error: expected one of `#`, `>`, `const`, identifier, or lifetime, found `-`
  --> $DIR/issue-81800.rs:1:6
   |
LL | fn x˂-
   |      ^ expected one of `#`, `>`, `const`, identifier, or lifetime

error: aborting due to 2 previous errors

