tests/ui/span/issue-81800.rs
fn x˂- //~ ERROR: unknown start of token
       //~^ ERROR: expected one of `#`, `>`, `const`, identifier, or lifetime, found `-`
